ok, genera el merge bastante bien. pero no busca todos los elementos de dependencias, solo el nivel toqueteado
