# App/Dtos/ConnectionDto.cs
@@ -1,0 +1,7 @@
+namespace DbStudio.Dtos;
+
+public class ConnectionDto
+{
+    public string ConnectionName { get; set; } = string.Empty;
+    public string ConnectionString { get; set; } = string.Empty;
+}
